When migrating a domain from other control panel like Plesk, you can now select to have to downloaded directly from a remote FTP or SSH server. The migrate-domain.pl command-line script also allows use of ftp:// or ssh:// URLs for backup sources.
If the skeleton directory contains a public_html sub-directory, it is copied to a sub-domain's web pages directory when the domain is created.
For alias domains whose virtusers are always copied from the target, no home directory is created (as it isn't needed).
The path to the public_html and cgi-bin directories is now stored in each new domain's data file, so that they are correctly preserved when the path is changed in the template, or the domain is moved to another system with a different directory name.
Basic Exim support, thanks to Bill Moyers and John Gray.
When migrating a cPanel, Plesk or Ensim backup, the original domain name can now be worked out automatically, as long as the backup contains just one.
For new installs, new features in older versions are not shown on the System Information page.
Fixed the modification of Webalizer and Logrotate config files when a domain's Apache logs are outside it's home directory.
Apache logs outside a domain's home directory are now included in backups and restores.
Added the --delete-existing flag to migrate-domain.pl, to remove any existing virtual server with the same name before re-migrating.
Plesk sub-domains are now included with migrating, including any users for managing their content.
The background collectinfo.pl cron job can be run less frequently or disabled using a new Module Config page option.
Added a script to change the Virtualmin license in all needed files on an already installed system.
Added the Magento eCommerce package to Virtualmin's script installers, beta version 0.9.17740.
Added the --name-only flag to all list-* command-line API programs, to output just object names for easier use in scripts.